<resources>
    <!-- BASE -->
    <string name="app_name">Portfolio APP</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="username">Username</string>

    <!-- LOGIN -->
    <string name="login_button_send">Login</string>
    <string name="login_register">Don\'t you have an account?\nRegister</string>

    <!-- REGISTER -->
    <string name="register_button_send">Register</string>
    <string name="register_login">Already have an account?\nLogin</string>

</resources>
