<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="loading"
            type="boolean"/>
    </data>

    <RelativeLayout
        style="@style/AppTheme.Dark">

        <LinearLayout
            android:id="@+id/lnrRegisterHeader"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/register_header_margin"
            android:gravity="center"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/imgRegisterLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"/>

            <TextView
                style="@style/TextView.Title.Accent"
                android:text="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrRegisterContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_above="@+id/btnRegisterSend"
            android:layout_below="@+id/lnrRegisterHeader"
            android:gravity="center">

            <EditText
                android:id="@+id/edtRegisterUsername"
                style="@style/EditText.FormAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edtRegisterPassword"
                style="@style/EditText.FormAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edtRegisterRetypePassword"
                style="@style/EditText.FormAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegisterSend"
            style="@style/Button.Accent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/register_footer_margin"
            android:text="@string/register_button_send"/>

        <include
            layout="@layout/view_loading"
            bind:loading="@{loading}"/>

    </RelativeLayout>

</layout>